# pvcaptest

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .justfile  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  MAINTAINER.md  MANIFEST.in  README.md  README.rst  base_cap_test.ipynb  captest_env.yml  change_log.md  default_dist_env.yml  environment.yml  example.ipynb  example_c.ipynb  load_b_data.ipynb  load_c_data.ipynb  load_das_data.ipynb  load_data.py  pvc_env.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  todo.md  win-env-spec.txt
.agents/skills/add-test-setup/: SKILL.md
.agents/skills/conda-release/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/docs-update/: SKILL.md
.agents/skills/merge-pr/: SKILL.md
.agents/skills/unit-tests/: SKILL.md
.github/workflows/: publish.yml  pytest.yml
binder/: environment.yml
captest/: __init__.py  _version.py  capdata.py  captest.py  columngroups.py  io.py  prtest.py  renaming.py  test_util.py  util.py
captest/tests/: test_CapTest.py
ci/: requirements-py3.10.yml  requirements-py3.11.yml  requirements-py3.7-min.yml  requirements-py3.7.yml  requirements-py3.8.yml  requirements-py3.9.yml  requirements-py35.yml  requirements-py36.yml  requirements-py37.yml  requirements-py37holoviz.yml  requirements-py38.yml
docs/: conf.py  example_update_notes.md  examples.rst  index.rst  installation.rst  release.rst  requirements.txt
docs/_static/: custom.css
docs/examples/: bifi_config.yaml  captest_class.ipynb  captest_class_bifi.ipynb  captest_from_config.ipynb  clear_sky.ipynb  complete_capacity_test.ipynb  concise_capacity_test.ipynb  reporting_conditions.ipynb
docs/examples/data/: column_groups.xlsx  column_groups_bifi.xlsx  example_meas_data.csv  example_meas_data_bifi.csv  example_measured_data.csv  pvsyst_example_HourlyRes_2_bifi.CSV
docs/source/: captest.rst  modules.rst
docs/source/api_reference/: calcparams.rst  capdata.rst  captest.rst  classes.rst  clearsky.rst  columngroups.rst  filters.rst  index.rst  io.rst  plotting.rst  prtest.rst  util.rst
docs/specs/: 2026-04-26-filter-irr-ref-val-design.md  2026-04-26-scatter-plot-am-pm-tc-power-design.md
docs/superpowers/notes/: 2026-07-17-docs-style-anchor-candidates.md
docs/superpowers/plans/: 2026-05-24-clearsky-module-extraction.md  2026-05-24-filter-classes-base.md  2026-05-24-filter-irr-example.md  2026-05-27-filter-sensors.md  2026-06-01-captest-auto-wrap.md  2026-06-01-filter-time.md  2026-06-02-filter-custom.md  2026-06-03-filter-outliers.md  2026-06-04-data-filtered-property.md  2026-06-04-filter-clearsky.md  2026-06-04-filter-regression.md  2026-06-04-straightforward-filters.md  2026-06-05-summary-rebuild.md  2026-06-05-visualization-rewrite.md  2026-06-06-config-round-trip.md  2026-06-08-chunk-a-cleanup.md  2026-06-08-chunks-b-c.md  2026-06-09-spec-corrected-etotal-test-coverage.md  2026-06-10-reuse-agg-column-message.md  2026-06-27-captest-rc-ownership-1-data-model.md  2026-06-27-captest-rc-ownership-2-manual-override.md  2026-06-27-captest-rc-ownership-3-rep-cond-sync.md  2026-06-27-captest-rc-ownership-4-captest-results.md  2026-06-27-captest-rc-ownership-5-serialization-load.md  2026-07-01-filter-classes-1-rolling-std.md  2026-07-01-filter-classes-2-abs-diff-prev.md  2026-07-01-filter-classes-3-boolean-flag.md  2026-07-01-filter-classes-4-filter-threshold.md  (+3 more)
docs/user_guide/: bifacial.rst  captest.rst  custom_test_setups.rst  dataload.rst  index.rst  reporting_conditions.rst  saving_reproducing.rst
documentation/: Makefile  captest.rst  conf.py  index.rst  load_data.rst  modules.rst
examples/: Austin Mueller Municipal Ap _ut__NREL_TMY.MET  Clear Sky Examples.ipynb  Reporting Conditions Examples.ipynb  captest_example.ipynb  creating_test_data.ipynb  example_das_data.csv  load_example_test_data.ipynb
examples/data/: pvsyst_example_HourlyRes_2.CSV
src/captest/: __init__.py  _version.py  calcparams.py  capdata.py  captest.py  clearsky.py  columngroups.py  filters.py  io.py  plotting.py  prtest.py  util.py
tests/: conftest.py  context.py  smoke_test.py  test_CapData.py  test_CapTest.py  test_calc_params.py  test_captest.py  test_columngroups.py  test_filter_classes.py  test_filter_helpers_move.py  test_fixtures.py  test_io.py  test_plotting.py  test_prtest.py  test_util.py
tests/data/: ae_column_groups.yml  column_groups.json  example_data.csv  example_meas_data.csv  example_meas_data_aeheaders.csv  example_measured_data_column_groups.json  example_measured_data_column_groups.xlsx  example_measured_data_column_groups.yml  example_measured_data_column_groups_subgroups.json  external_tagging_column_groups.json  nrel_data.csv  nrel_data_modelled_csky.csv  nrel_data_val_err.csv  pvsyst_example_HourlyRes_2_semicolon.csv  pvsyst_example_HourlyRes_2_xls_dates.csv  pvsyst_example_day_month_year.csv  pvsyst_example_day_month_year_xls_dates.csv  reg_test_data.csv  site_loc_orientation.json  site_loc_orientation.yaml
(+10 files in other folders)
