[build-system]
requires = ["setuptools>=40.6.0", "wheel", "versioneer[toml]==0.28"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/captest/_version.py"
versionfile_build = "captest/_version.py"
tag_prefix = "v"
parentdir_prefix = "captest-"
