[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "captest"
authors = [
    {name = "Ben Taylor", email = "benjaming.taylor@gmail.com"},
]
description = "Framework and methods to facilitate photovoltaic facility capacity testing following ASTM E2848."
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files=["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

dependencies = [
    "pandas>=1",
    "numpy>=1.13.0,<2.4.0",
    "python-dateutil>=2.5",
    "matplotlib>=2",
    "statsmodels>=0.8",
    "scikit-learn>=0.19",
    "bokeh>=3.0.0",
    "colorcet",
    "param<2.0",
]

[project.optional-dependencies]
optional = [
    "holoviews>=1.14.8",
    "panel",
    "pvlib>=0.9.0",
    "openpyxl",
    "s3path",
    "s3fs",
]

[dependency-groups]
dev = [
    "captest[optional]",
    {include-group = "test"},
    {include-group = "docs"},
]
test = [
    "coveralls",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
]
docs = [
    "docutils==0.18.1",
    "nbsphinx==0.9.1",
    "notebook",
    "recommonmark==0.7.1",
    "sphinx==6.1.3",
    "sphinx_rtd_theme==1.2.0",
]

[project.urls]
Homepage = "http://github.com/bt-/pvcaptest"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/captest/_version.py"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
