[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "captest"
authors = [
    {name = "Ben Taylor", email = "benjaming.taylor@gmail.com"},
]
description = "Framework and methods to facilitate photovoltaic facility capacity testing following ASTM E2848."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files=["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

dependencies = [
    "pandas>=1",
    "numpy>1.24.4,<2.4",
    "python-dateutil>=2.5",
    "matplotlib>=2",
    "statsmodels>=0.8",
    "scikit-learn>=0.19",
    "bokeh>=3.0.0",
    "colorcet",
    "param<2.0",
]

[project.optional-dependencies]
optional = [
    "holoviews>=1.14.8",
    "panel",
    "pvlib>=0.9.0",
    "openpyxl",
    "s3path",
    "s3fs",
]

[dependency-groups]
dev = [
    "captest[optional]",
    {include-group = "test"},
    {include-group = "docs"},
]
test = [
    "coveralls",
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "ruff>=0.14.13",
]
docs = [
    "docutils==0.18.1",
    "nbsphinx==0.9.1",
    "notebook",
    "recommonmark==0.7.1",
    "sphinx==6.1.3",
    "sphinx_rtd_theme==1.2.0",
]

[project.urls]
Homepage = "http://github.com/bt-/pvcaptest"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/captest/_version.py"
version_scheme = "no-guess-dev"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
# Set the maximum line length to 88, ruff default.
line-length = 88
exclude = [
    "docs/examples/**",
    "**/*.ipynb",
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore line length in docs config, source files with unavoidable long docstrings,
# and test files with long test data strings
"docs/conf.py" = ["E501", "F821"]
"src/captest/io.py" = ["E501"]
"src/captest/plotting.py" = ["E501"]
"tests/test_io.py" = ["E501"]
"tests/test_CapData.py" = ["E501"]
"tests/test_prtest.py" = ["E501"]
