[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = captest/_version.py
versionfile_build = captest/_version.py
tag_prefix = v
parentdir_prefix = captest-

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
